--- a/babel.config.json
+++ b/babel.config.json
@@ -1,3 +1,3 @@
 {
-  "presets": [["@babel/env", { "modules": "commonjs" }]]
+  "presets": [["@babel/env", { "modules": "commonjs", "corejs": "3.22", "useBuiltIns": "usage" }]]
 }
