--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "babel-loader": "^8.2.5",
+    "core-js": "^3.22.8",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2"
   }
